gcc/testsuite/rust.test/compilable/integer_inference_var1.rs
const TEST_CONST: i32 = 10;

fn main() {
    let a;
    a = TEST_CONST;
}
