gcc/testsuite/rust.test/fail_compilation/struct_init1.rs
struct Foo {
    a: f32,
    b: f32,
}

fn main() {
    let a = Foo { 0: 10.0, 1: 20.0 };
}
